Homarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-server
  namespace: homarr-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.kbtech.org`)
      kind: Rule
      services:
        - name: homarr-server
          port: 7575
  tls:
    secretName: kbtech-tls # change to your cert name
